fixed: login forms are all fitting on mobile screen sizes and not pushing content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,7 +181,7 @@ form .form-group {
 /* -------------------------------------------------------- Register/Login/Logout */
 
 .log-form-card {
-    margin: 100px;
+    margin: 0 auto;
 }
 
 
